# chess

./: .gitmodules
src/: CMakeLists.txt
src/lib/app/: actor.cpp  actor.h  board.cpp  board.h  game.cpp  game.h  piece.cpp  piece.h
src/lib/utils/: codes.h
src/main/sim/: CMakeLists.txt  main.cpp
src/unittest/: chess_test.cpp  test_actor.cpp  test_actor.h  test_location.cpp  test_location.h  test_piece.cpp  test_piece.h
